--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <style></style>
   </head>
   <body>
     <h1 class="text-center">Pratica con il Grid System</h1>
@@ -19,28 +18,126 @@
     <div class="container-md">
       <div class="row">
         <div class="col">
-          <div class="bg-primary">1</div>
+          <div class="bg-primary border border-dark p-3"></div>
         </div>
         <div class="col">
-          <div class="bg-primary">2</div>
+          <div class="bg-primary border border-dark p-3"></div>
         </div>
         <div class="col">
-          <div class="bg-primary">3</div>
+          <div class="bg-primary border border-dark p-3"></div>
         </div>
       </div>
     </div>
     <hr />
     <h2 class="text-center">Esercizio 2</h2>
+    <div class="container">
+      <div class="row">
+        <div class="col col-md-12">
+          <div class="bg-warning border border-dark p-3"></div>
+        </div>
+        <div class="col col-md-12">
+          <div class="bg-warning border border-dark p-3"></div>
+        </div>
+        <div class="col col-md-12">
+          <div class="bg-warning border border-dark p-3"></div>
+        </div>
+      </div>
+    </div>
+    <hr />
+    <h2 class="text-center">Esercizio 3</h2>
+    <div class="container-sm">
+      <div class="row">
+        <div class="col">
+          <div class="bg-success border border-dark p-3"></div>
+        </div>
+        <div class="col">
+          <div class="bg-success border border-dark p-3"></div>
+        </div>
+        <div class="col">
+          <div class="bg-success border border-dark p-3"></div>
+        </div>
+      </div>
+    </div>
     <div class="container-md">
       <div class="row">
-        <div class="col-sm-1 col-md-4 col-lg-4">
-          <div class="bg-warning">1</div>
+        <div class="col-sm-12 col-md-4">
+          <div class="bg-success border border-dark p-3"></div>
         </div>
-        <div class="col-sm-1 col-md-4 col-lg-4">
-          <div class="bg-warning">2</div>
+        <div class="col-sm-12 col-md-4">
+          <div class="bg-success border border-dark p-3"></div>
         </div>
-        <div class="col-sm-1 col-md-4 col-lg-4">
-          <div class="bg-warning">3</div>
+        <div class="col-sm-12 col-md-4">
+          <div class="bg-success border border-dark p-3"></div>
+        </div>
+      </div>
+    </div>
+    <div class="container-lg">
+      <div class="row">
+        <div class="col-sm-12 col-md-12 col-lg-4">
+          <div class="bg-success border border-dark p-3"></div>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-4">
+          <div class="bg-success border border-dark p-3"></div>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-4">
+          <div class="bg-success border border-dark p-3"></div>
+        </div>
+      </div>
+    </div>
+    <div class="container-xl">
+      <div class="row">
+        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-4">
+          <div class="bg-success border border-dark p-3"></div>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-4">
+          <div class="bg-success border border-dark p-3"></div>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-4">
+          <div class="bg-success border border-dark p-3"></div>
+        </div>
+      </div>
+    </div>
+    <hr />
+    <h2 class="text-center">Esercizio 4</h2>
+    <div class="container">
+      <div class="row">
+        <div class="col col-md-5">
+          <div class="bg-danger border border-dark p-3"></div>
+        </div>
+        <div class="col col-md-2">
+          <div class="bg-danger border border-dark p-3"></div>
+        </div>
+        <div class="col col-md-5">
+          <div class="bg-danger border border-dark p-3"></div>
+        </div>
+      </div>
+    </div>
+    <hr />
+    <h2 class="text-center">Esercizio 5</h2>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-md-12 col-lg-2">
+          <div class="bg-info border border-dark p-3"></div>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-10">
+          <div class="bg-info border border-dark p-3">
+            <div class="row">
+              <div class="col-sm-12 col-md-12 col-lg-6"><div class="bg-secondary border border-dark p-3"></div></div>
+              <div class="col-sm-12 col-md-12 col-lg-6"><div class="bg-secondary border border-dark p-3"></div></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <hr />
+    <h2 class="text-center">Esercizio 6</h2>
+    <div class="container">
+      <div class="row">
+        <div class="col col-md-6">
+          <div class="bg-dark border border-dark p-3"></div>
+        </div>
+        <div class="col col-md-6">
+          <div class="bg-dark border border-dark p-3"></div>
         </div>
       </div>
     </div>
